Document that Dendrite needs to be run with more memory